Kubernetes Media Server/cavisor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: cadvisor
  name: cadvisor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cadvisor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: cadvisor
    spec:
      containers:
        - image: google/cadvisor:latest
          name: cadvisor
          resources: {}
          volumeMounts:
            - mountPath: /rootfs
              name: cadvisor-hostpath0
              readOnly: true
            - mountPath: /var/run
              name: cadvisor-hostpath1
              readOnly: true
            - mountPath: /sys
              name: cadvisor-hostpath2
              readOnly: true
            - mountPath: /var/lib/docker
              name: cadvisor-hostpath3
              readOnly: true
            - mountPath: /dev/disk
              name: cadvisor-hostpath4
              readOnly: true
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /
          name: cadvisor-hostpath0
        - hostPath:
            path: /var/run
          name: cadvisor-hostpath1
        - hostPath:
            path: /sys
          name: cadvisor-hostpath2
        - hostPath:
            path: /var/lib/docker/
          name: cadvisor-hostpath3
        - hostPath:
            path: /dev/disk/
          name: cadvisor-hostpath4
status: {}
