Kubernetes Media Server/private-ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: private-ingress
  labels:
    name: private-ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-ingress-controller
  namespace: private-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      name: private-nginx-ingress
  template:
    metadata:
      labels:
        name: private-nginx-ingress
    spec:
      serviceAccountName: private-nginx-ingress
      containers:
        - name: private-nginx-ingress-controller
          image: registry.k8s.io/ingress-nginx/controller:v1.8.1
          args:
          - /nginx-ingress-controller
          - --election-id=private-ingress-controller-leader
          - --publish-service=$(POD_NAMESPACE)/private-nginx-ingress
          - --controller-class=k8s.io/private-nginx-ingress
          - --ingress-class=k8s.io/private-ingress'
          - --configmap=$(POD_NAMESPACE)/private-ingress-config
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: private-ingress
spec:
  controller: k8s.io/private-nginx-ingress
---
apiVersion: v1
kind: Service
metadata:
  name: private-nginx-ingress
  namespace: private-ingress
spec:
  type: NodePort
  ports:
  - port: 30080
    nodePort: 30080
    targetPort: 80
    protocol: TCP
    name: http
  - port: 30443
    nodePort: 30443
    targetPort: 443
    name: https
  selector:
    name: private-nginx-ingress
---
