Kubernetes Media Server/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jackett
  name: jackett
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: jackett
    spec:
      containers:
        - env:
            - name: TZ
              value: America/New_York
          image: linuxserver/jackett
          name: jackett
          ports:
            - containerPort: 9117
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: jackett-hostpath0
            - mountPath: /downloads
              name: jackett-hostpath1
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /srv/Configs/Jackett
          name: jackett-hostpath0
        - hostPath:
            path: /srv/Torrents
          name: jackett-hostpath1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: jackett
  name: jackett
  namespace: mediaserver
spec:
  ports:
    - name: "9117"
      port: 9117
      targetPort: 9117
  selector:
    io.kompose.service: jackett
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
  name: jackett-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-ingress
  rules:
  - host: "local.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              number: 9117
        path: /jackett
        pathType: Prefix
