Kubernetes Media Server/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: prowlarr
    spec:
      containers:
        - env:
            - name: TZ
              value: America/New_York
          image: linuxserver/prowlarr
          name: prowlarr
          ports:
            - containerPort: 9696
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: prowlarr-conf
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: prowlarr-longhorn
          name: prowlarr-conf
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: prowlarr
  name: prowlarr
  namespace: mediaserver
spec:
  ports:
    - name: "9696"
      port: 9696
      targetPort: 9696
  selector:
    io.kompose.service: prowlarr
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: prowlarr-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-nginx
  tls:
  - hosts:
      - prowlarr.andrewsutliff.com
    secretName: prowlarr-http-tls
  rules:
  - host: "prowlarr.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              number: 9696
        path: /
        pathType: Prefix
