Kubernetes Media Server/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: qbittorrent
    spec:
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: "OnRootMismatch"
      imagePullSecrets:
        - name: regcred
      containers:
        - securityContext:
            capabilities:
              add: [ "NET_ADMIN" ]
          image: tanchwa/qbittorrent-openvpn:v0.3.1
          imagePullPolicy: Always
                  # securityContext:
            # privileged: true
              #            capabilities:
              # add:
              #  - "NET_ADMIN"
          name: qbittorrent
          ports:
            - containerPort: 8080
            - containerPort: 6881
            - containerPort: 6881
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: qb-conf
            - mountPath: /config/openvpn/se493.nordvpn.com.tcp443.ovpn
              name: openvpn-tcp
              subPath: se493.nordvpn.com.tcp443.ovpn
              readOnly: false
            - mountPath: /config/openvpn/se493.nordvpn.com.udp1194.ovpn
              name: openvpn-udp
              subPath: se493.nordvpn.com.udp1194.ovpn
              readOnly: false
            - mountPath: /downloads
              name: qb-nfs0
            - mountPath: /etc/timezone
              name: qbittorrentvpn-hostpath0
              readOnly: true
            - mountPath: /dev/net/tun
              name: qbittorrentvpn-hostpath1
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: qb-longhorn
          name: qb-conf
        - name: openvpn-tcp
          configMap:
            name: openvpn-tcp
        - name: openvpn-udp
          configMap:
            name: openvpn-udp
        - nfs:
            server: 192.168.1.19
            readOnly: false
            path: /mnt/Main/kubernetes/Torrents
          name: qb-nfs0
        - hostPath:
            path: /etc/timezone
          name: qbittorrentvpn-hostpath0
        - hostPath:
            path: /dev/net/tun
          name: qbittorrentvpn-hostpath1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
  namespace: mediaserver
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "6881"
      port: 6881
      targetPort: 6881
    - name: 6881-udp
      port: 6881
      protocol: UDP
      targetPort: 6881
  selector:
    io.kompose.service: qbittorrent
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: qbittorrent-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-nginx
  tls:
  - hosts:
      - qbittorrent.andrewsutliff.com
    secretName: qbittorrent-http-tls
  rules:
  - host: "qbittorrent.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              number: 8080
        path: /
        pathType: Prefix
