Kubernetes Media Server/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sabnzbd
  name: sabnzbd
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/dockermediaserver-default: "true"
        io.kompose.service: sabnzbd
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - env:
            - name: TZ
              value: America/New_York
          image: ghcr.io/linuxserver/sabnzbd
          name: sabnzbd
          ports:
            - containerPort: 8080
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-conf
            - mountPath: /downloads
              name: sabnzbd-nfs0
            - mountPath: /incomplete-downloads
              name: sabnzbd-nfs1
      restartPolicy: Always
      volumes:
        - persistentVolumeClaim:
            claimName: sabnzdb-longhorn
          name: sabnzbd-conf
        - nfs:
            readOnly: false
            server: 192.168.1.19
            path: /mnt/Main/kubernetes/Downloads
          name: sabnzbd-nfs0
        - nfs:
            server: 192.168.1.19
            readOnly: false
            path: /mnt/Main/kubernetes/Downloads/Incomplete
          name: sabnzbd-nfs1
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sabnzbd
  name: sabnzbd
  namespace: mediaserver
spec:
  ports:
    - name: "8181"
      port: 8181
      targetPort: 8080
    - name: "9191"
      port: 9191
      targetPort: 9090
  selector:
    io.kompose.service: sabnzbd
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: sabnzbd-ingress-private
  namespace: mediaserver
spec:
  ingressClassName: private-nginx
  tls:
  - hosts:
      - sabnzbd.andrewsutliff.com
    secretName: sabnzdb-http-tls
  rules:
  - host: "sabnzbd.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: sabnzbd
            port:
              number: 8181
        path: /
        pathType: Prefix
